<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.GamesHistoryActivity"
        android:background="@drawable/gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="391dp"
            android:layout_height="27dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.95"
            android:layout_marginBottom="508dp">

        <TextView
                android:text="@string/Win_name"
                android:fontFamily="@font/main_text_regula"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_height="wrap_content" android:id="@+id/Winner"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/Score1"
                android:textSize="15sp"
                android:fontFamily="@font/main_text_regula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Score1"
                app:layout_constraintStart_toEndOf="@+id/Winner"
                android:layout_marginStart="24dp"
                tools:layout_editor_absoluteY="0dp"/>
        <TextView
                android:text="@string/Score2"
                android:textSize="15sp"
                android:fontFamily="@font/main_text_regula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Score2"
                app:layout_constraintStart_toEndOf="@+id/Score1" android:layout_marginStart="24dp"
                tools:layout_editor_absoluteY="0dp"/>
        <TextView
                android:text="@string/date"
                android:textSize="15sp"

                android:fontFamily="@font/main_text_regula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/date"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="356dp"
            android:layout_height="457dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.811"/>
    <TextView
            android:text="@string/history_of_matches"
            android:fontFamily="@font/main_text_regula"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="358dp"
            android:layout_height="44dp" android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.301" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.026"/>
    <Button
            android:text="@string/back"
            android:layout_width="146dp"
            style="@style/button_style"
            android:gravity="left"
            android:layout_height="42dp" android:id="@+id/back1"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.06" app:layout_constraintVertical_bias="0.128"/>
    <Button
            android:text="@string/cl_h"
            android:layout_width="201dp"
            style="@style/button_style"
            android:textSize="15sp"
            android:gravity="left"
            android:layout_height="42dp" android:id="@+id/clear_history"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.995" app:layout_constraintVertical_bias="0.128"/>

</androidx.constraintlayout.widget.ConstraintLayout>