<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MenuActivity"
        android:background="@drawable/gradient">
    <Button android:layout_width="170dp"
            android:layout_height="45dp"
            android:id="@+id/button_play"
            android:text="@string/play" app:layout_constraintStart_toStartOf="parent"
            style="@style/button_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="8dp">

    </Button>
    <Button
            android:text="@string/history"
            style="@style/button_style"

            android:layout_width="176dp"
            android:layout_height="61dp" android:id="@+id/history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintTop_toBottomOf="@+id/button_rules" android:layout_marginTop="20dp"/>
    <Button android:layout_width="191dp"
            android:layout_height="50dp"
            android:id="@+id/button_rules"
            android:text="@string/rules"
            style="@style/button_style"

            app:layout_constraintTop_toBottomOf="@+id/button_play" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.501">

    </Button>
    <Button android:layout_width="131dp"
            android:layout_height="58dp"
            android:id="@+id/button_exit"
            android:text="@string/exit"
            style="@style/button_style"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="100dp"
            android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/history"
            app:layout_constraintVertical_bias="0.0">

    </Button>
    <ImageView
            android:layout_width="154dp"
            android:layout_height="149dp" app:srcCompat="@drawable/ghost" android:id="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.501"/>
    <TextView
            android:text="@string/game_name"
            android:fontFamily="@font/main_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/logo"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:textSize="50dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>