<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ResultActivity">
    <TextView
            android:text="@string/game_over"
            android:layout_width="325dp"
            android:layout_height="97dp" android:id="@+id/game_over"
            android:textSize="60dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.062"
    />
    <ImageView
            android:layout_width="252dp"
            android:layout_height="283dp" app:srcCompat="@drawable/ghost_winner" android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="124dp"/>
    <Button
            android:text="@string/share_res"
            android:layout_width="198dp"
            android:layout_height="57dp" android:id="@+id/share_result"
            android:layout_marginStart="24dp" app:layout_constraintStart_toEndOf="@+id/result_to_menu"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/back_to_menu"
            android:layout_width="164dp"
            android:layout_height="61dp" android:id="@+id/result_to_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text_winner"
            android:textSize="30dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintVertical_bias="0.258"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/winner_name"
            android:textSize="30dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_winner" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.333" app:layout_constraintBottom_toTopOf="@+id/imageView2"/>
</androidx.constraintlayout.widget.ConstraintLayout>


