<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.GameMode"
        android:background="@drawable/gradient">

    <TextView
            android:text="@string/params"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/main_text_regula"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.496"/>
    <TextView
            android:text="@string/player1_n"
            android:layout_width="211dp"
            android:layout_height="41dp" android:id="@+id/textView2"
            android:fontFamily="@font/main_text_regula"

            android:textSize="20dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="4dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/player2_n"
            android:layout_width="205dp"
            android:layout_height="38dp" android:id="@+id/textView4"
            android:fontFamily="@font/main_text_regula"

            android:textSize="20dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="16dp"/>
    <TextView
            android:gravity="center"
            android:text="@string/end_points"
            android:layout_width="364dp"
            android:layout_height="84dp" android:id="@+id/textView7"
            android:textSize="30dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/main_text_regula"

            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="256dp"/>
    <Button
            android:text="25"
            android:layout_width="78dp"
            style="@style/button_style"

            android:layout_height="75dp" android:id="@+id/number_25"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="52dp"/>
    <Button
            android:text="20"
            style="@style/button_style"

            android:layout_width="83dp"
            android:layout_height="74dp" android:id="@+id/number_20"
            app:layout_constraintStart_toEndOf="@+id/number_15" android:layout_marginStart="12dp"
            app:layout_constraintEnd_toStartOf="@+id/number_25" app:layout_constraintHorizontal_bias="0.304"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <Button
            android:text="15"
            android:layout_width="85dp"
            style="@style/button_style"
            android:layout_height="70dp" android:id="@+id/number_15"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginTop="52dp" app:layout_constraintStart_toEndOf="@+id/number_10"
            android:layout_marginStart="12dp"/>
    <Button
            android:text="10"
            android:layout_width="87dp"
            android:layout_height="70dp" android:id="@+id/number_10"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/button_style"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="52dp"
            android:layout_marginStart="4dp"/>
    <EditText android:layout_width="188dp" android:layout_height="40dp"
              app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="20dp"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
              android:id="@+id/player1_field" android:layout_marginTop="28dp"
              app:layout_constraintTop_toBottomOf="@+id/textView"
              android:fontFamily="@font/main_text_regula"
    >

    </EditText>
    <EditText android:layout_width="187dp" android:layout_height="39dp"
              app:layout_constraintStart_toEndOf="@+id/textView4"
              android:id="@+id/player2_field" android:layout_marginStart="24dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="16dp"
              app:layout_constraintTop_toBottomOf="@+id/player1_field"
              android:fontFamily="@font/main_text_regula">

    </EditText>
    <Button
            android:text="@string/start"
            android:layout_width="265dp"
            style="@style/button_style"
            android:layout_height="97dp" android:id="@+id/starting"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="28dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>