<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.GameRulesActivity"
        android:background="@drawable/gradient">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/game_rules"
              android:fontFamily="@font/main_text_regula"
              android:textSize="20sp"
              android:gravity="center"

              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
              app:layout_constraintHorizontal_bias="0.533" android:id="@+id/textView3">
    </TextView>
    <TextView android:layout_width="301dp" android:layout_height="243dp"
              android:text="@string/Game_rules"
              android:fontFamily="@font/main_text_regula"
              android:textSize="12sp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintVertical_bias="0.142" android:id="@+id/textView8"
    >
    </TextView>
    <Button
            android:text="@string/back"
            android:layout_width="134dp"
            style="@style/button_style"
            android:gravity="left"
            android:textSize="10sp"
            android:layout_height="30dp" android:id="@+id/back1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.007" app:layout_constraintVertical_bias="0.025"/>
    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager1"
            android:layout_width="410dp" android:layout_height="323dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.tabs.TabLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:tabIndicatorColor="@color/purple_500"
            android:background="@color/trans"
            app:tabSelectedTextColor="@color/white"
            android:id="@+id/tab_layout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="320dp">
    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>